--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ baseURL = "https://yourdomain.com"
 defaultContentLanguage = "en"
 # language code
 languageCode = "en"
-title = "NAME_OF_YOUR_BLOG"
+title = "frankfolabi's tech blog"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
@@ -68,7 +68,7 @@ theme = "LoveIt"
         pre = "<i class='fab fa-github fa-fw'></i>"
         post = ""
         name = ""
-        url = "https://yourgithuburl"
+        url = "https://github.com/frankfolabi"
         title = "GitHub"
         weight = 5
 
@@ -97,7 +97,7 @@ theme = "LoveIt"
   #  App icon config
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
-    title = "NAME_OF_YOUR_BLOG"
+    title = "frankfolabi"
     # whether to omit favicon resource links
     noFavicon = false
     # modern SVG favicon to use in place of older style .png and .ico files
@@ -142,7 +142,7 @@ theme = "LoveIt"
       # URL of the LOGO
       logo = ""
       # title name
-      name = "NAME_OF_YOUR_BLOG"
+      name = "frankfolabi"
       # you can add extra information before the name (HTML format is supported), such as icons
       pre = ""
       # you can add extra information after the name (HTML format is supported), such as icons
@@ -196,9 +196,9 @@ theme = "LoveIt"
       # Gravatar Email for preferred avatar in home page
       gravatarEmail = ""
       # URL of avatar shown in home page (LINK_TO_YOUR_PHOTO_BELOW)
-      avatarURL = "https://avatars.githubusercontent.com/u/7815661?v=4"
+      avatarURL = "https://avatars.githubusercontent.com/u/75861776?s=400&u=cb5b25f0990d44515d92a1b117a95c055c385016&v=4"
       #  title shown in home page (HTML format is supported)
-      title = "NAME_OF_YOUR_BLOG"
+      title = "Zero to One"
       # subtitle shown in home page
       subtitle = "My AWS DevOps Engineering Journey"
       # whether to use typeit animation for subtitle
@@ -219,9 +219,9 @@ theme = "LoveIt"
   # Social config about the author
   [params.social]
     Bitbucket = ""
-    GitHub = ""
-    Linkedin = "YOUR_LINKEDIN_LINK"
-    Twitter = ""
+    GitHub = "frankfolabi"
+    Linkedin = "frankfolabi"
+    Twitter = "frankfolabi"
     Gitlab = ""
     Email = ""
     Instagram = ""
@@ -236,7 +236,7 @@ theme = "LoveIt"
     Paypal = ""
     Youtubelegacy = ""
     Youtubecustom = ""
-    Youtubechannel = ""
+    Youtubechannel = "frankfolabi"
     Tumblr = ""
     Quora = ""
     Keybase = ""
@@ -511,7 +511,7 @@ theme = "LoveIt"
 
 # Author config
 [author]
-  name = "YOUR_NAME"
+  name = "Franklin Afolabi"
   email = ""
   link = ""
 
